[package]
name = "signal-hook"
version = "0.1.11"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Unix signal handling"
documentation = "https://docs.rs/signal-hook"
repository = "https://github.com/vorner/signal-hook"
readme = "README.md"
keywords = ["signal", "unix", "daemon"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/signal-hook" }
maintenance = { status = "actively-developed" }

[features]
mio-support = ["mio"]
tokio-support = ["futures-core", "mio-support", "tokio"]

[workspace]
members = [
    "./",
    "signal-hook-registry",
    "tokio-tests",
]

[dependencies]
libc = "~0.2"
futures-core = { version = "0.3", optional = true }
mio = { version = "~0.6", optional = true }
signal-hook-registry = { version = "~1", path = "signal-hook-registry" }
tokio = { version = "~0.2", optional = true, default-features = false, features = ["io-driver"] }

[dev-dependencies]
version-sync = "~0.8"
tokio = { version = "~0.2", features = ["rt-core"] }
futures = "~0.3"

[package.metadata.docs.rs]
all-features = true
