[package]
name = "signal-hook-registry"
version = "1.2.1"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Masaki Hara <ackie.h.gmai@gmail.com>",
]

description = "Backend crate for signal-hook"
documentation = "https://docs.rs/signal-hook-registry"
readme = "README.md"
repository = "https://github.com/vorner/signal-hook"
keywords = ["signal", "unix", "daemon"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/signal-hook" }
maintenance = { status = "actively-developed" }

[dependencies]
arc-swap = "~0.4"
# libc = "~0.2"
# nfx: Replace the following when 0.2.80 is published
libc = { version = "0.2.79", git = "https://github.com/rust-lang/libc", branch = "master" }

[dev-dependencies]
version-sync = "~0.8"
signal-hook = { version = "~0.1", path = ".." }
